bin/testsuite/tests/compiler/src/errors/compiler5632.swg
#global testerror "Err0401"
#test
{
    var x = (10 + 20;  // Syntax error: Unmatched parenthesis
}
